--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseURL = "https://example.com"
+publishDir = "public"
 
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT"]
